--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,22 @@ body {
     background-color: rgb(0, 98, 128);
 }
 
+.hide {
+    display: none;
+}
+
+/* Banner image */
+#banner {
+    background-image: url('./images/bowie-banner.jpg');
+    background-repeat: repeat-x;
+    width: 100%;
+    height: 15vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding-top: 20px;
+  }
+
 .question-card, .welcome-card {
     width: 850px;
     max-width: 80%;
