--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    /* font-family: */
+    font-family: 'Montserrat', sans-serif;
 }
 
 body {
@@ -20,12 +20,12 @@ body {
 
 /* Banner image */
 #banner {
-    background-image: url('./images/bowie-banner.jpg');
+    background-image: url("../images/bowie-banner.jpg");
     background-repeat: repeat-x;
     width: 100%;
     height: 15vh;
     position: absolute;
-    top: 0;
+    top: 20px;
     left: 0;
     padding-top: 20px;
   }
@@ -46,10 +46,10 @@ body {
     display: block;
 }
 
-/* .startButton, .next-button {
+#startButton, #submit-btn {
     font-size: 1.5rem;
-    padding: 5px; */
-/* } */ */
+    padding: 5px;
+} 
 
 /* to hide welcome screen */
 .hide {
